--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,17 @@
 
     </head>
     <body>
-
+    
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-46145484-1', 'vumaasha.github.io');
+          ga('send', 'pageview');
+        </script>
+    
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/codehook">{{ site.name }}</a></h1>
